src/objects/Contact_Us_Brand__c.object
<CustomObject>
    <description>This object is for configuring the brand options for the contact us page.</description>
    <fields>
        <fullName>Background_Color_Article__c</fullName>
        <description>Background color for articles and search results</description>
        <label>Background Color Article</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Back_Bar__c</fullName>
        <description>Background color for Back to Search Results bar</description>
        <label>Background Color Back Bar</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Button_Disabled__c</fullName>
        <description>background color for when button is disabled (before agreement to Ts &amp; Cs)</description>
        <label>Background Color Button Disabled</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Button__c</fullName>
        <description>Button background color in hexidecimal</description>
        <label>Background Color Button</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Content_Area__c</fullName>
        <description>Content area background color in hexidecimal</description>
        <label>Background Color Content Area</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Header__c</fullName>
        <description>Header background color in hexidecimal</description>
        <label>Background Color Header</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Page__c</fullName>
        <description>Page background color in hexidecimal</description>
        <label>Background Color Page</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Tab_Not_Selected__c</fullName>
        <description>Not selected tab background color in hexidecimal</description>
        <label>Background Color Tab Not Selected</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Color_Tab_Selected__c</fullName>
        <description>Selected tab background color in hexidecimal</description>
        <label>Background Color Tab Selected</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Form_Color__c</fullName>
        <label>Background Form Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Border_Color_Article__c</fullName>
        <description>Color of border around article</description>
        <label>Border Color Article</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>This is the brand that is to be configured.</description>
        <label>Brand</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Content_Border_Color__c</fullName>
        <description>color for border box around main page content</description>
        <label>Content Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_brand_filter_on_product_search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable brand filter on product search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Article_Title__c</fullName>
        <description>font to use for article title</description>
        <label>Font Article Title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Article__c</fullName>
        <description>font to use for article</description>
        <label>Font Article</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Back_Bar__c</fullName>
        <description>Font for Back to Search Results bar</description>
        <label>Font Back Bar</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Article_Title__c</fullName>
        <description>font color of article title</description>
        <label>Font Color Article Title</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Article__c</fullName>
        <description>font color for article</description>
        <label>Font Color Article</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Back_Bar__c</fullName>
        <description>Font color for back to search results bar</description>
        <label>Font Color Back Bar</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Content_Links__c</fullName>
        <label>Font Color Content Links</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Featured_Links__c</fullName>
        <description>Font color for featured article links</description>
        <label>Font Color Featured Links</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Footer_Link__c</fullName>
        <label>Font Color Footer Link</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Footer__c</fullName>
        <description>font color for footer text</description>
        <label>Font Color Footer</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Form_Label__c</fullName>
        <description>Font color for form labels</description>
        <label>Font Color Form Label</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Header_Dropdowns__c</fullName>
        <label>Font Color Header Dropdowns</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Header_Links__c</fullName>
        <label>Font Color Header Links</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Header__c</fullName>
        <label>Font Color Header</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Helpful_Answers__c</fullName>
        <description>Font color for &quot;was this article helpful&quot; responses</description>
        <label>Font Color Helpful Answers</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Intro__c</fullName>
        <description>Font color for intro text</description>
        <label>Font Color Intro</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Links__c</fullName>
        <description>font color for links</description>
        <label>Font Color Links</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Page_Title__c</fullName>
        <description>font color for page title</description>
        <label>Font Color Page Title</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Phone_Link__c</fullName>
        <label>Font Color Phone Link</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Phone__c</fullName>
        <label>Font Color Phone</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Related_Article_Link__c</fullName>
        <description>Font color for related article links</description>
        <label>Font Color Related Article Link</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Related_Article__c</fullName>
        <description>font color for related article</description>
        <label>Font Color Related Article</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Search_Results__c</fullName>
        <description>Font color for Search Results label</description>
        <label>Font Color Search Results</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Search_Term__c</fullName>
        <description>Font color for search term in search results</description>
        <label>Font Color Search Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Section_Header__c</fullName>
        <description>font color for section header</description>
        <label>Font Color Section Header</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Tab_Not_Selected__c</fullName>
        <description>Font Color for Non-Selected Tabs</description>
        <label>Font Color Tab Not Selected</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Tab_Selected__c</fullName>
        <label>Font Color Tab Selected</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Color_Was_This_Article_Helpful__c</fullName>
        <description>font color for was this article helpful</description>
        <label>Font Color Was This Article Helpful</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Featured_Links__c</fullName>
        <description>Font family for featured article links</description>
        <label>Font Featured Links</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Footer__c</fullName>
        <description>Font type for footer</description>
        <label>Font Footer</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Form_Label__c</fullName>
        <description>Font name for form labels</description>
        <label>Font Form Label</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Header__c</fullName>
        <label>Font Header</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Intro__c</fullName>
        <description>font name for intro text</description>
        <label>Font Intro</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Links__c</fullName>
        <description>Font to use for Links</description>
        <label>Font Links</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Page_Title__c</fullName>
        <description>font to use for page title</description>
        <label>Font Page Title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Phone__c</fullName>
        <label>Font Phone</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Related_Article_Heading__c</fullName>
        <description>font type for related article heading</description>
        <label>Font Related Article Heading</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Search_Results__c</fullName>
        <description>Font used for Search Results label</description>
        <label>Font Search Results</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Search_Term__c</fullName>
        <description>Font for search term in search results</description>
        <label>Font Search Term</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Section_Header__c</fullName>
        <description>Font type to use for section header</description>
        <label>Font Section Header</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Article_Title__c</fullName>
        <description>font size for article title</description>
        <label>Font Size Article Title</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Article__c</fullName>
        <description>font size article</description>
        <label>Font Size Article</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Back_Bar__c</fullName>
        <description>Font size for back to search results bar</description>
        <label>Font Size Back Bar</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Featured_Links__c</fullName>
        <label>Font Size Featured Links</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Footer__c</fullName>
        <description>Font size for footer</description>
        <label>Font Size Footer</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Form_Label__c</fullName>
        <description>Font size for form labels</description>
        <label>Font Size Form Label</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Header__c</fullName>
        <label>Font Size Header</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Intro__c</fullName>
        <description>Font size for intro text</description>
        <label>Font Size Intro</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Links__c</fullName>
        <description>font size for links</description>
        <label>Font Size Links</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Page_Title__c</fullName>
        <description>font size for page title</description>
        <label>Font Size Page Title</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Phone_Hours__c</fullName>
        <label>Font Size Phone Hours</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Phone_Icon__c</fullName>
        <label>Font Size Phone Icon</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Phone_Number__c</fullName>
        <label>Font Size Phone Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Related_Article_Heading__c</fullName>
        <description>font size for related article heading</description>
        <label>Font Size Related Article Heading</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Search_Results__c</fullName>
        <description>Font size for Search Results label</description>
        <label>Font Size Search Results</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Search_Term__c</fullName>
        <description>Font size for search term in search results</description>
        <label>Font Size Search Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Section_Header__c</fullName>
        <description>font size for section header</description>
        <label>Font Size Section Header</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Tab__c</fullName>
        <description>font size for tabs</description>
        <label>Font Size Tab</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Size_Was_This_Article_Helpful__c</fullName>
        <description>font size was this article helpful</description>
        <label>Font Size Was This Article Helpful</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Tab__c</fullName>
        <description>font type to use for tab labels</description>
        <label>Font Tab</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Font_Was_This_Article_Helpful__c</fullName>
        <description>font type to use for &apos;was this article helpful&apos;</description>
        <label>Font Was This Article Helpful</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Bottom_Border_Color__c</fullName>
        <label>Header Bottom Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Favicon__c</fullName>
        <label>URL Favicon</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Header_Image__c</fullName>
        <label>URL Header Image</label>
        <type>Url</type>
    </fields>
    <label>Contact Us Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brand__c</columns>
        <columns>NAME</columns>
        <columns>URL_Header_Image__c</columns>
        <columns>Disable_brand_filter_on_product_search__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contact Us Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Us Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>